# kwex

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  install-kwex.bat  install-kwex.sh  kwex.py  names_and_functions.txt  pyproject.toml  readme.txt  regression-test-no-spice.bat  regression-test-no-spice.sh  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
java/: VMtoXML.java  VMtoXML.txt  kjava.py
pds3/: pds3_parser.py
resources/: body_frames.json  fits_spice_kws.json  instr_frame_params.json  major_to_version.json  names_and_functions.txt  spice_equations.json  var_sub.json
spice/: body_frames.json  fits_spice_kws.json  instr_frame_params.json  kspice.py  names_and_functions.txt  nh_v06.tm  spice_calcs.json
src/: cli.py  config.py  constants.py  main.py  names.py  state.py
src/kwex/: cli.py  config.py  constants.py  main.py  names.py  state.py
src/kwex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/loggers/: interrupter.py  logger.py
src/parsers/: fits.py  pds3.py  spice.py  template.py  values.py
src/utils/: java.py  products.py  sources.py  values.py
src/velocity/: processor.py
templates/: examples.vm  regression_test.vm  regression_test_no_spice.vm
testing/success/: regression_test_success.lblx  vals_regression_test_success.json
tests/: regression-test.bat  regression-test.sh  regression_test.fit  regression_test.lbl
tests/success/: regression_test_no_spice_success.lblx  regression_test_success.lblx  vals_regression_test_no_spice_success.json  (+1 more)
tmp/: vals.json
(+69 files in other folders)
