[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kwex"
version = "3.2.0"
description = "KeyWord EXtraction tool for PDS3-to-PDS4 migration"
readme = "README.md"
authors = [
    { name = "Ben Hirsch", email = "bhirsch1@umd.edu" }
]

requires-python = ">=3.11"

dependencies = [
    "regex",
    "numpy",
    "astropy",
    "spiceypy",
    "simpleeval",
]

[project.scripts]
kwex = "kwex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kwex*"]

[tool.setuptools.package-data]
kwex = [
    "resources/*.*",
    "velocity/java/*.*"
]
